web/*: Reworked 'light' theme (and tweaked the 'dark')
Signed-off-by: Brad Figg <brad.figg@canonical.com>

--- a/web/scripts/sru-workflow-template.html
+++ b/web/scripts/sru-workflow-template.html
@@ -3,11 +3,8 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />        <title>%s</title>
 
-        <link title="dark" rel="stylesheet" href="http://people.canonical.com/~kernel/reports/css/themes/bjf/style.css" type="text/css" media="print, projection, screen" />
-        <link title="dark" rel="stylesheet" href="http://people.canonical.com/~kernel/reports/css/dark.css" type="text/css" media="print, projection, screen" />
-
-        <link title="light" rel="stylesheet" href="http://people.canonical.com/~kernel/reports/css/themes/blue/style.css" type="text/css" media="print, projection, screen" />
-        <link title="light" rel="stylesheet" href="http://people.canonical.com/~kernel/reports/css/light.css" type="text/css" media="print, projection, screen" />
+        <link title="light" rel="stylesheet" href="css/light-style.css" type="text/css" media="print, projection, screen" />
+        <link title="dark"  rel="stylesheet" href="css/dark-style.css" type="text/css" media="print, projection, screen" />
 
         <script type="text/javascript" src="http://people.canonical.com/~kernel/reports/js/styleswitcher.js"></script>
 
@@ -89,23 +86,6 @@
             });
         </script>
 
-	<style>
-		/* -------------------------------------------------------------------------------
-		 * Kernel SRU Workflow
-		*/
-		.ksw-new           { color: #ffffff; }
-		.ksw-incomplete    { color: #ffff22; }
-		.ksw-confirmed     { color: #ffff22; }
-		.ksw-triaged       { color: #33ff11; }
-		.ksw-in_progress   { color: #ff88ff; }
-		.ksw-fix_committed { color: #000000; }
-		.ksw-fix_released  { color: #33ff11; }
-		.ksw-invalid       { color: #333333; }
-		.ksw-wont_fix      { color: #000000; }
-		.ksw-opinion       { color: #000000; }
-		.ksw-expired       { color: #000000; }
-		.ksw-unknown       { color: #000000; }
-	</style>
     </head>
 
 
